@@ -32,8 +32,8 @@ $SMALL_RULE = '';
 $DEFAULT_RULE = '';
 $MIDDLE_RULE = '';
 $BIG_RULE = '';
-$NODE_FILE_EXTENSION = "roff";
-$EXTENSION = "roff";
+$NODE_FILE_EXTENSION = 'roff';
+$EXTENSION = 'roff';
 $MENU_SYMBOL = '*';
 $AVOID_MENU_REDUNDANCY = 0;
 
